Fix z-index

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -11,7 +11,7 @@ $default-transition: 0.3s;
 $header-icon-size: 18px;
 $header-height-mobile: 48px;
 $header-height-desktop: 64px;
-$z-index-header: 1;
-$z-index-burger-menu: 1;
+$z-index-header: 999;
+$z-index-burger-menu: 999;
 $category-phones-bg: #6d6474;
 $category-accessories-bg: #973d5f;
